--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -63,9 +63,30 @@
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
     "  # Your code here\n",
+    "  # Step 1 is to remove any extra spaces and \n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(\"hello\") == sorted(\"olleh\")"
    ]
   },
   {
@@ -130,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-learner",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
