Submitting python assignment part 1

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -56,32 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (388899851.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    anagram_checker(\"Silent\", \"listen\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
-    "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
-    "  # Step 1 is to remove any extra spaces and \n",
-    "\n",
-    "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Silent\", \"listen\")\n",
-    "# Check new branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -90,29 +65,61 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(\"hello\") == sorted(\"olleh\")"
+    "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
+    "def anagram_checker(word_a, word_b):\n",
+    "  # Your code here\n",
+    "  # Step 1 is to remove any extra spaces and convert uppercase to lowercase\n",
+    "  word_a = word_a.lower()\n",
+    "  word_b = word_b.lower()\n",
+    "\n",
+    "  return sorted(word_a) == sorted(word_b)\n",
+    "\n",
+    "# Run your code to check using the words below:\n",
+    "anagram_checker(\"Silent\", \"listen\") # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -128,12 +135,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "  # Modify your existing code here\n",
+    "  if not is_case_sensitive:\n",
+    "    #Change upper case to lower if this is true\n",
+    "    word_a = word_a.lower()\n",
+    "    word_b = word_b.lower()\n",
+    "  else:\n",
+    "    True #No need to do anything because python is case sensitive by default\n",
+    "  \n",
+    "  return sorted(word_a) == sorted(word_b)\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
@@ -141,11 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "anagram_checker(\"Silent\", \"Listen\", True) # False"
+    "anagram_checker(\"silent\", \"Listen\", True) # False"
    ]
   },
   {
